random scrollbar issue fixed

--- a/src/kanbas-new/Tools/SecondaryNavigation/index.css
+++ b/src/kanbas-new/Tools/SecondaryNavigation/index.css
@@ -1,6 +1,5 @@
 .wd-navbar-secondary {
 	max-width: 190px;
-	overflow-y: scroll;
 }
 
 .wd-navbar-secondary > .list-group-item {
